# community_detection_spectral_cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
configs/: exp1.toml
src/: config.cpp  config.hpp  csv_writer.hpp  downloader.cpp  downloader.hpp  dspar.cpp  dspar.hpp  experiment.cpp  experiment.hpp  graph.cpp  graph.hpp  leiden.cpp  leiden.hpp  main.cpp  modularity.cpp  modularity.hpp  rng.hpp  sampler.cpp  sampler.hpp
tests/: test_dspar.cpp  test_experiment.cpp  test_graph.cpp  test_leiden.cpp  test_main.cpp  test_modularity.cpp  test_sampler.cpp
